treewide: Squash some bugs

--- a/src/pages/app/app.scss
+++ b/src/pages/app/app.scss
@@ -180,7 +180,7 @@
   width: unquote("min(100vw, 360px)");
   height: 100vh;
   background: #40AFD1;
-  z-index: 2;
+  z-index: 5;
 }
 
 .home-page-mobile-drawer-close-btn {
